# homeworkFour

./: .flake8  README.md  coverage.txt  main.py  pyproject.toml
src/: category.py  config.py  main.py  order.py  product.py  product_LawnGrass.py  product_Smartphone.py  product_iterator.py  read_product.py
test/: conftest.py  test_category.py  test_print_mixin.py  test_product.py  test_product_LawnGrass.py  test_product_Smartphone.py
